Initial setup of /datasets and /dataset/{id} get operations
